fixed spacing and h1

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -37,7 +37,7 @@
 
     position: relative; 
   
-    animation-name: animatetop;
+    animation-name: animateFromTop;
     animation-duration: 0.4s
 }
 
@@ -47,24 +47,32 @@
     margin-top: 20px;
 }
 
-@keyframes animatetop {
+@keyframes animateFromTop {
     from {
-        top:-300px; 
-        opacity:0
+        top: -300px; 
+        opacity: 0;
     }
 
     to {
-        top:0; 
-        opacity:1
+        top: 0; 
+        opacity: 1;
     }
 }
 
-//COMPUTER STYLES
-.computerScreen {
+//TODO work on this
+main {
     background-image: url(../styles/assets/computer.png);
     background-size: contain;
     background-position: bottom center;
     background-repeat: no-repeat;
+}
+
+//COMPUTER STYLES
+.computerScreen {
+    // background-image: url(../styles/assets/computer.png);
+    // background-size: contain;
+    // background-position: bottom center;
+    // background-repeat: no-repeat;
 
     width: 100%;
     height: 90vh;
@@ -122,7 +130,7 @@ select {
     align-items: center;
 
     p {
-        padding-top: 10px;
+        padding: 10px 2px 0;
     }
 }
 
@@ -158,9 +166,9 @@ p.author {
 
         &:hover,
         &:focus {
-        transform: none;
-        transition: .5s all;
-        background-color: $buttonHoverColor;
+            transform: none;
+            transition: .5s all;
+            background-color: $buttonHoverColor;
         }   
     }
 }
